# cookiecutter-python

./: .gitignore  README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: build.yml  codeql-analysis.yml  cruft-update.yml  doc.yml  lint.yml  release.yml  test.yml
{{cookiecutter.project_name}}/docs/contributing/: 1.-contributing-guide.md
{{cookiecutter.project_name}}/docs/source/: conf.py  index.rst
{{cookiecutter.project_name}}/scripts/: lint.sh
{{cookiecutter.project_name}}/tests/: conftest.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: __init__.py
