[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.63.0"
numpy = "^1.22"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.19.0"
commitizen = "^2.35.0"
vulture = "^2.4"
bandit = "^1.7.4"
safety = "^2.3.4"
isort = "^5.11.0"
flake8-bugbear = "^22.10.25"
Flake8-pyproject = "^1.2.2"
black = "^22.12.0"
mypy = "^1.0.0"
ipython = "^8.5.0"
pytest = "^7.1.2"
pytest-cov = "^4.0.0"
pytest-mock = "^3.9.0"
pep8-naming = "^0.13.0"
cruft = "^2.11.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^4.5.0"
sphinx-book-theme = "^0.3.2"
nbsphinx = "^0.8.8"
m2r2 = "^0.3.2"
pandoc = "^2.3"
portray = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.flake8]
count = true
max-line-length = 100
ignore = [
    "E203",
    "W503"
]

[tool.mypy]
ignore_missing_imports = true
strict_optional = false

[tool.coverage.report]
exclude_lines = ["pragma: no cover"]
omit = ["*tests*"]

[tool.bandit]
skips = ["B101"]

[tool.cruft]
skip = []
